<resources>
    <string name="app_name">Note Management System</string>

    <string name="require">Please input your info!</string>

    <string name="input_email">Enter your email</string>
    <string name="input_password">Enter your password</string>
    <string name="remember">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="exit">Exit</string>


    <string name="sign_up_form">Sign Up Form</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_are_not_match">Password are not match</string>
    <string name="format_email">Email is not valid</string>

    <string name="sign_up_complete">You have signed up successfully</string>
    <string name="sign_in_complete">You have signed in successfully</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Category">Category</string>
    <string name="Priority">Priority</string>
    <string name="Status">Status</string>
    <string name="Note">Note</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="Change_pass">Change Password</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>