<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Category" />
        <item
            android:id="@+id/nav_priority"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Priority" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Status" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Note" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Edit_profile" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Change password" />
    </group>
</menu>