<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.notemanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.notemanagement.ui.category.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_priority"
        android:name="com.example.notemanagement.ui.priority.PriorityFragment"
        android:label="Priority"
        tools:layout="@layout/fragment_priority" />
    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.notemanagement.ui.status.StatusFragment"
        android:label="@string/Status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.notemanagement.ui.note.NoteFragment"
        android:label="@string/Note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.notemanagement.ui.editProfile.EditProfileFragment"
        android:label="@string/Edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.notemanagement.ui.changePassword.ChangePasswordFragment"
        android:label="@string/Change_pass"
        tools:layout="@layout/fragment_change_password" />

</navigation>